--- a/MaurerRose/MaurerRose.csproj
+++ b/MaurerRose/MaurerRose.csproj
@@ -4,8 +4,9 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyVersion>2019.10.12.32</AssemblyVersion>
-    <FileVersion>2019.10.12.32</FileVersion>
+    <AssemblyVersion>2019.10.12.101</AssemblyVersion>
+    <FileVersion>2019.10.12.101</FileVersion>
+    <StartupObject>MaurerRose.Program</StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -15,5 +16,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\Release\</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Update="FormMainGDI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
 
 </Project>
